--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
+version = '1.13.2-1.3'
 group = 'com.stal111.compressed_items' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'compressed_items'
 
